# lore

./: .gitignore  README.md  eval_v2_baseline.py  eval_v5.py  pyproject.toml  requirements-5090.txt  soko_diag.py  soko_selftest.py  test_live_solve.py
data/parsed/: artifacts.json  corpse_effects.json  items.json  monsters.json  prayer_mechanics.json
data/strategy/: ASCENSION_STRATEGY.md
docs/: AA_MACRO_GAPS.md  ARCHITECTURE_V2.md  ASCENSION_CAPABILITY_LADDER.md  AUTOASCEND_BASE.md  AUTOASCEND_GAP_ANALYSIS.md  FIRST_ASCENSION_PLAYBOOK.md  GAP_ANALYSIS_AUTOASCEND_2026-06-20.md  GEHENNOM_DESCENT_PLAYBOOK.md  LLM_VALUE_ABLATIONS.md  LORE_PIVOT_BRIEF.md  LORE_RESULTS.md  LORE_STATUS_2026-06-29.md  LORE_STATUS_2026-07-11.md  NETHACK_KB_DEEP_DIVE.md  PLANNING_LAYER.md
experiments/autoascend/: Dockerfile.frozen-ref  aa_bench.py  aa_crashtest.py  aa_deaths.py  aa_diag.py  aa_full.py  aa_gap.py  aa_plan.py  aa_profile.py  aa_run.py  aa_run2.py  aa_run3.py  aa_run4.py  aa_run5.py  aa_run6.py  aa_scen_cmp.py  aa_trace.py  agentic_debug.py  aggregate_profile.py  annotation_effect.py  asc_diag.py  asc_diag2.py  asc_invdump.py  asc_reveal.py  asc_reveal2.py  asc_takestair.py  autonomous_debug.py  autonomous_debug2.py  autonomous_debug3.py  bug_benchmark.py  (+66 more)
nhc/: agent2.py  agent2_v3.py  agent2_v4.py  agent2_v5.py  combat.py  elbereth_env.py  env.py  equipment.py  expert_agent.py  fight.py  food.py  item_id.py  kb.py  models.py  navigation.py  obs_parser.py  prayer.py  rnd.py  rules.py  sokoban.py  store.py  strategy.py
scripts/: analyze_deaths.py  analyze_spt.py  eval_agent2.py  eval_expert.py  fetch_irc_logs.py  fetch_strategywiki.py  fetch_wiki.py  parse_mechanics.py  parse_monsters.py  parse_objects.py  parse_wiki_xml.py  test_elbereth.py
tests/: test_combat.py  test_navigation.py
(+56 files in other folders)
